// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="caofvmi soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-ddd5kv soui-radio-group"
>
  <div
    class="cscg4k5 soui-radio-wrapper ceg5x3m soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="cscg4k5 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-dmr5xa soui-radio-indicator-wrapper"
    >
      <span
        class="co0ikgh soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-2q2qi9 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="c5io7bp soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="crb32h9 soui-slider-track"
    >
      <div
        class="c-g5pfb soui-slider-track-inner"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-zb6pkf soui-slider-indicator cpoalu2 soui-slider-indicator-end"
        />
        <div
          class="ckr9r84 soui-slider-end-value crbw1gz soui-slider-value"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="caofvmi soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cq0hf70 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cnsrtqr soui-button-primary c3ct0ht soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
